<resources>
    <string name="app_name">TunasQakap</string>
    <string name="delete">Delete</string>
    <string name="nama_berita">Nama Berita</string>
    <string name="input_title_berita">Title Berita</string>
    <string name="input_isi_berita">Isi berita</string>
    <string name="input_author">Author</string>
    <string name="button_save">Save</string>
    <string name="detail_berita">Detail Berita</string>
    <string name="author">Author</string>
    <string name="add_berita">Add Berita</string>
    <string name="refresh">Refresh</string>
    <string name="edit_berita">Edit Berita</string>
</resources>
